--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@
           data-aos-delay="150"
         >
           <div class="col-xl-6 col-lg-8">
-            <h1>
-              Powerful Digital Solutions With TeenTechAfrica<span>.</span>
-            </h1>
-            <h2>We are a team of talented digital experts and trainers</h2>
+            <h1>Powerful Digital Solutions With TeenTechAfrica</h1>
+            <h2>We are a team of talented digital experts and trainers.</h2>
           </div>
         </div>
 
